# dvd-20001

Actividades-C8286/: BibliotecasC-paralelismo.ipynb  Caso-Refactorizacion.ipynb  Concurrencia.ipynb  Evaluacion5-C8286.ipynb  Evaluacion7-C8286.ipynb  Paralelismo.ipynb  README.md  Repaso.ipynb
Actividades-C8286/Actividad10/: Multithreading.ipynb
Actividades-C8286/Actividad11/: Multiprocessing.ipynb
Actividades-C8286/Actividad12/: Algoritmos-paralelos.ipynb  Analisis-rendimiento.ipynb
Actividades-C8286/Actividad13/: Sincronización-consistencia.ipynb
Actividades-C8286/Actividad14/: Modelos-programacion-distribuida.ipynb
Actividades-C8286/Actividad15/: Algoritmos-distribuidos.ipynb
Actividades-C8286/Actividad16/: Sistemas-archivos-distribuidos.ipynb
Actividades-C8286/Actividad17/: Bases-datos-distribuidas.ipynb  Propiedades-base-distribuidas.ipynb
Actividades-C8286/Actividad18/: Mensajeria.ipynb
Actividades-C8286/Actividad19/: Microservicios-contenederizacion.ipynb
Actividades-C8286/Actividad6/: Service1.py  Service2.py  asyncio_1.py  server.py
Actividades-C8286/Actividad8/: Memoria-compartida-distribuida.ipynb
Actividades-C8286/Evaluacion2/: Ejercicios.py
Actividades-C8286/LenguajeC/Opcional1-C8286/Codigo1/: CMakeLists.txt  Ejemplo1.c  Ejemplo10.c  Ejemplo11.c  Ejemplo12.c  Ejemplo13.c  Ejemplo14.c  Ejemplo15.c  Ejemplo16.c  Ejemplo17.c  Ejemplo18.c  Ejemplo19.c  Ejemplo2.c  Ejemplo20.c  Ejemplo21.c  Ejemplo22.c  Ejemplo23.c  Ejemplo24.c  Ejemplo2a.c  Ejemplo3.c  Ejemplo4.c  Ejemplo5.c  Ejemplo6.c  Ejemplo7.c  Ejemplo8.h  Ejemplo9.c
(+16 files in other folders)
