set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(Ejemplo1.out
  Ejemplo1.c
)

add_executable(Ejemplo2.out
  Ejemplo2.c
)

add_executable(Ejemplo3.out
  Ejemplo3.c
)

add_executable(Ejemplo4.out
  Ejemplo4.c
)

add_executable(Ejemplo5.out
  Ejemplo5.c
)

add_executable(Ejemplo6.out
  Ejemplo6.c
)

add_executable(Ejemplo7.out
  Ejemplo7.c
)

add_executable(Ejemplo9.out
  Ejemplo9.c
)

add_executable(Ejemplo10.out
  Ejemplo10.c
)

add_executable(Ejemplo11.out
  Ejemplo11.c
)

add_executable(Ejemplo12.out
  Ejemplo12.c
)

add_executable(Ejemplo14.out
  Ejemplo14.c
)

add_executable(Ejemplo15.out
  Ejemplo15.c
)

add_executable(Ejemplo16.out
  Ejemplo16.c
)

add_executable(Ejemplo17.out
  Ejemplo17.c
)

add_executable(Ejemplo18.out
  Ejemplo18.c
)

add_executable(Ejemplo19.out
  Ejemplo19.c
)

add_executable(Ejemplo20.out
  Ejemplo20.c
)

add_executable(Ejemplo21.out
  Ejemplo21.c
)

add_executable(Ejemplo22.out
  Ejemplo22.c
)

add_library(Ejemplo23 STATIC
  Ejemplo23.c
)

add_executable(Ejemplo24.out
  Ejemplo24.c
)
